// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KStepper renders each step type 1`] = `
<ol class="k-stepper">
  <li class="k-step">
    <div class="k-step-container completed">
      <div class="k-step-state px-3"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" data-testid="k-step-completed">
          <title>Completed</title>
          <circle fill="var(--teal-300)" cx="12" cy="12" r="12"></circle>
          <path fill="var(--teal-300)" d="M16 9L10 15L7 12.0001"></path>
          <path stroke="var(--white)" d="M16 9L10 15L7 12.0001" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
        </svg></div>
      <div class="k-step-label" style="max-width: px;"><label class="k-input-label">
          step: completed
        </label></div>
    </div>
  </li>
  <li class="k-step">
    <div class="k-step-container">
      <div class="k-step-state px-3">
        <div class="k-step-spinner"><svg width="24" height="24" viewBox="0 0 50 50" data-testid="k-step-pending">
            Pending
            <circle cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle></svg></div>
      </div>
      <div class="k-step-label bolder" style="max-width: px;"><label class="k-input-label">
          step: pending
        </label></div>
    </div>
  </li>
  <li class="k-step">
    <div class="k-step-container">
      <div class="k-step-state px-3"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" data-testid="k-step-error">
          <title>Error</title>
          <circle fill="var(--red-500)" cx="12" cy="12" r="12"></circle>
          <path fill="var(--white)" fill-rule="evenodd" clip-rule="evenodd" d="M15.7397 9.51743C16.0868 9.1703 16.0868 8.60748 15.7397 8.26035C15.3925 7.91322 14.8297 7.91322 14.4826 8.26035L12 10.7429L9.51746 8.26035C9.17033 7.91322 8.60751 7.91322 8.26038 8.26035C7.91325 8.60748 7.91325 9.1703 8.26038 9.51743L10.7429 12L8.26035 14.4826C7.91322 14.8297 7.91322 15.3925 8.26035 15.7397C8.60748 16.0868 9.1703 16.0868 9.51743 15.7397L12 13.2571L14.4826 15.7397C14.8297 16.0868 15.3925 16.0868 15.7397 15.7397C16.0868 15.3925 16.0868 14.8297 15.7397 14.4826L13.2571 12L15.7397 9.51743Z"></path>
        </svg></div>
      <div class="k-step-label bolder error" style="max-width: px;"><label class="k-input-label">
          step: error
        </label></div>
    </div>
  </li>
  <li class="k-step">
    <div class="k-step-container">
      <div class="k-step-state px-3"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" data-testid="k-step-default">
          <title>Default</title>
          <circle fill="var(--grey-300)" cx="12" cy="12" r="12"></circle>
        </svg></div>
      <div class="k-step-label" style="max-width: px;"><label class="k-input-label">
          step: default
        </label></div>
    </div>
  </li>
</ol>
`;

exports[`KStepper renders steps 1`] = `
<ol class="k-stepper">
  <li class="k-step">
    <div class="k-step-container completed">
      <div class="k-step-state px-3"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" data-testid="k-step-completed">
          <title>Completed</title>
          <circle fill="var(--teal-300)" cx="12" cy="12" r="12"></circle>
          <path fill="var(--teal-300)" d="M16 9L10 15L7 12.0001"></path>
          <path stroke="var(--white)" d="M16 9L10 15L7 12.0001" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
        </svg></div>
      <div class="k-step-label" style="max-width: px;"><label class="k-input-label">
          Step a long long long long time ago
        </label></div>
    </div>
  </li>
  <li class="k-step">
    <div class="k-step-container completed">
      <div class="k-step-state px-3"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" data-testid="k-step-completed">
          <title>Completed</title>
          <circle fill="var(--teal-300)" cx="12" cy="12" r="12"></circle>
          <path fill="var(--teal-300)" d="M16 9L10 15L7 12.0001"></path>
          <path stroke="var(--white)" d="M16 9L10 15L7 12.0001" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
        </svg></div>
      <div class="k-step-label" style="max-width: px;"><label class="k-input-label">
          in a galaxy far far away
        </label></div>
    </div>
  </li>
  <li class="k-step">
    <div class="k-step-container">
      <div class="k-step-state px-3">
        <div class="k-step-spinner"><svg width="24" height="24" viewBox="0 0 50 50" data-testid="k-step-pending">
            Pending
            <circle cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle></svg></div>
      </div>
      <div class="k-step-label bolder" style="max-width: px;"><label class="k-input-label">
          Kongponents were battling in space and
        </label></div>
    </div>
  </li>
  <li class="k-step">
    <div class="k-step-container">
      <div class="k-step-state px-3"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" data-testid="k-step-default">
          <title>Default</title>
          <circle fill="var(--grey-300)" cx="12" cy="12" r="12"></circle>
        </svg></div>
      <div class="k-step-label" style="max-width: px;"><label class="k-input-label">
          fighting robots and space monsters with lots of explosions
        </label></div>
    </div>
  </li>
</ol>
`;
